# fullstack-interview-test

./: README.md  Taskfile.yml
app/: .eslintrc.js  .eslintrc.json  package.json  tsconfig.json
app/src/: App.vue  main.ts
app/src/api/: branches.api.ts  commits.api.ts  pullRequests.api.ts
app/src/assets/: main.scss
app/src/layouts/: MainLayout.vue
app/src/models/: author.ts  branch.ts  branchList.ts  commit.ts  files.ts  pullRequest.ts
app/src/plugins/: vuetify.ts
app/src/router/: index.ts
app/src/views/: Commit.vue  Commits.vue  CreatePullRequest.vue  Home.vue  PullRequest.vue  PullRequests.vue
app/src/views/branches/: Branch.vue  Branches.vue
app/src/views/commits/: Commit.vue  Commits.vue
app/src/views/pull_requests/: CreatePullRequest.vue  PullRequest.vue  PullRequests.vue
backend/: Taskfile.yml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/git_api/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/git_api/migrations/: 0001_initial.py  0002_auto_20210616_0202.py  0003_rename_to_breanch_pullrequest_to_branch.py  0004_alter_pullrequest_unique_together.py
backend/git_api/utils/: mixins.py
